<resources>
    <string name="app_name">SmartBudget</string>

    <string name="FACEBOOK_APP_ID">518205832277386</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">68956d81187e481ce22609858708b5da</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Menu Title -->
    <string name="menu_home">Home</string>
    <string name="menu_account">Account</string>
    <string name="menu_budget">Budget</string>
    <string name="menu_transaction">Transaction</string>
    <string name="menu_report">Report</string>
    <string name="menu_calculator">Calculator</string>
    <string name="menu_travel">Travel</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="keyboard_9">9</string>
    <string name="keyboard_8">8</string>
    <string name="keyboard_7">7</string>
    <string name="keyboard_6">6</string>
    <string name="keyboard_5">5</string>
    <string name="keyboard_4">4</string>
    <string name="keyboard_3">3</string>
    <string name="keyboard_2">2</string>
    <string name="keyboard_1">1</string>
    <string name="keyboard_0">0</string>
    <string name="keyboard_000">000</string>
    <string name="keyboard_point">.</string>
    <string name="keyboard_clear">"C"</string>
    <string name="keyboard_multiplication">"×"</string>
    <string name="keyboard_division">"÷"</string>
    <string name="keyboard_addition">"+"</string>
    <string name="keyboard_subtraction">"−"</string>
    <string name="keyboard_equal">"="</string>
    <string name="keyboard_commit">">"</string>

    <!-- Toast Message -->
    <string name="toast_on_back_pressed_message">\'뒤로\'버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="toolbar_add_transaction">Add Transaction</string>
    <string name="toolbar_edit_transaction">Edit Transaction</string>
    <string name="toolbar_spending_pattern">Spending Pattern</string>
    <string name="success_login_message">로그인에 성공 하셨습니다.</string>
    <string name="cancelled_login_message">로그인이 취소되었습니다.</string>
    <string name="tab_title_asset">Asset</string>
    <string name="tab_title_debt">Debt</string>
    <string name="toolbar_account">Account</string>
    <string name="tab_title_running">Running</string>
    <string name="tab_title_expired">Expired</string>
    <string name="toolbar_expense_by_category">Expense By Category</string>
    <string name="toolbar_title_transaction">Transaction</string>
    <string name="toolbar_title_calendar">Calendar</string>
    <string name="zero_money">0원</string>
    <string name="toolbar_title_calculator">Calculator</string>
    <string name="toolbar_title_report">Report</string>
    <string name="toolbar_title_budget">Budget</string>
    <string name="toolbar_title_add_budget">Add Budget</string>
    <string name="toolbar_account_detail">Account Detail</string>
    <string name="toolbar_title_home">Home</string>
    <string name="normal">Normal</string>
    <string name="waste">Waste</string>
    <string name="invest">Invest</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="transfer">Transfer</string>
    <string name="balance">Balance</string>
    <string name="type_expense">Expense</string>
    <string name="type_income">Income</string>
    <string name="toolbar_title_add_category">Add Category</string>
    <string name="toolbar_title_transfer">Transfer</string>
    <string name="toolbar_title_overview">Overview</string>
    <string name="alert_delete_title">Delete</string>
    <string name="alert_delete_message">Warning! If you delete this account, All transactions will be deteled!!</string>
    <string name="toolbar_edit_budget">Edit Budget</string>
    <string name="money_unit">원</string>
    <string name="percentage_sign">%</string>
    <string name="no_transactions">No transactions...</string>
    <string name="btn_save">save</string>
    <string name="btn_update">update</string>
    <string name="menu_back_up">BackUp</string>

    <string-array name="account_list">
        <item>현금</item>
        <item>수시입출금</item>
        <item>예금</item>
        <item>적금</item>
        <item>주식</item>
        <item>펀드</item>
        <item>보험</item>
        <item>부동산</item>
        <item>기타자산</item>
        <item>대출</item>
        <item>기타부채</item>
    </string-array>

    <string-array name="account_list_id">
        <item>cash</item>
        <item>checking_account</item>
        <item>saving_account</item>
        <item>installment_saving_account</item>
        <item>stock</item>
        <item>fund</item>
        <item>insurance</item>
        <item>real_estate</item>
        <item>other_asset</item>
        <item>debt</item>
        <item>other_debt</item>
    </string-array>

</resources>
