<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_balance_wallet_black_24dp"
            android:title="Account" />
        <item
            android:id="@+id/nav_budget"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_budget" />
        <item
            android:id="@+id/nav_transaction"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/menu_transaction" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_assessment_black_24dp"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_gradient_black_24dp"
            android:title="@string/menu_calculator" />
    </group>

</menu>
